--- a/banana_config.json
+++ b/banana_config.json
@@ -25,7 +25,7 @@
         "result": {
             "type": "string",
             "description": "The generated code.",
-            "path": "output"
+            "path": "outputs"
         }
     }
 }
